# ChangeLog for dev-java/java-sdk-docs
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.30 2004/09/21 08:39:39 axxo Exp $

*java-sdk-docs-1.5.0_rc (21 Sep 2004)

  21 Sep 2004; Thomas Matthijs <axxo@gentoo.org> -java-sdk-docs-1.5.0.ebuild,
  +java-sdk-docs-1.5.0_rc.ebuild:
  added ebuild for 1.5.0_rc removed the 1.5.0 since it was lying and should have
  been 1.5.0_beta2

  19 Jul 2004; <mkennedy@gentoo.org> java-sdk-docs-1.5.0.ebuild:
  Update for 1.5.0_beta2

*java-sdk-docs-1.2.2.006 (16 Jul 2004)

  16 Jul 2004; Thomas Matthijs <axxo@gentoo.org>
  +java-sdk-docs-1.2.2.006.ebuild:
  Adding ebuild for 1.2 closes 20117
  Thanks too larry schuler <larryas2@fastmail.us> 
  and  Douglas Pollock <douglas.pollock@magma.ca>

  30 Jun 2004; Tom Gall <tgall@gentoo.org>
  java-sdk-docs-1.4.1.ebuild:
  stable on ppc64, bug #55597

  06 Jun 2004; Karl Trygve Kalleberg <karltk@gentoo.org> 
  files/digest-java-sdk-docs-1.4.1:
  Neither can I, obviously... Fixes #53131 and #53044.

  02 Jun 2004; Karl Trygve Kalleberg <karltk@gentoo.org> 
  files/digest-java-sdk-docs-1.4.1:
  Regenerated md5sum, as Sun are not able to do any kind of release 
  engineering properly, and there's no wonder they're losing market 
  share.

  18 Mar 2004; Chris Aniszczyk <zx@gentoo.org> java-sdk-docs-1.4.1.ebuild:
  Updated to reflect that the doc is on EOL now. Closes #42104

  11 Mar 2004; Chris Aniszczyk <zx@gentoo.org> java-sdk-docs-1.3.1.ebuild,
  java-sdk-docs-1.4.2.ebuild:
  Stable on amd64

  23 Feb 2004; Sven Blumenstein <bazik@gentoo.org> java-sdk-docs-1.4.2.ebuild:
  Stable on sparc.

  15 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
  java-sdk-docs-1.4.1.ebuild:
  set ppc in keywords

*java-sdk-docs-1.5.0 (07 Feb 2004)

  07 Feb 2004; Adrian Almenar <strider@gentoo.org> java-sdk-docs-1.5.0.ebuild:
  Thanks Chris Aniszczyk <zx@mea-culpa.net> for the ebuild, just have some minor