@@ -1,0 +1,1 @@
+MD5 8474862d96672c01cb06d2c69c852df8 jdk-1_5_0-doc.zip 45580923
