@@ -1,1 +1,0 @@
-MD5 3a995cb5e176cb36b5b8bd818572c2a9 jdk-1_5_0-rc-doc.zip 45602704
